# WW-Logger

./: CMakeLists.txt  README.md
logger/: CMakeLists.txt
logger/include/: AsyncLogger.h  Config.h  ConsoleSink.h  DefaultFormatter.h  FileSink.h  Formatter.h  LogMessage.h  Logger.h  LoggerBase.h  Sink.h  SyncLogger.h
logger/include/Formatter/: DefaultFormatter.h  FormatterBase.h
logger/include/Logger/: AsyncLogger.h  AsyncWorker.h  LoggerBase.h  LoggerBuffer.h  SyncLogger.h
logger/include/Sinks/: ConsoleSink.h  DailyFileSink.h  DefaultFileSink.h  FileSink.h  HourlyFileSink.h  RotateFileSink.h  SinkBase.h  TimedFileSink.h
logger/src/: Config.cpp  ConsoleSink.cpp  DefaultFormatter.cpp  FileSink.cpp  Logger.cpp  LoggerBase.cpp  Sink.cpp  SyncLogger.cpp
logger/src/Formatter/: DefaultFormatter.cpp
logger/src/Logger/: AsyncLogger.cpp  AsyncWorker.cpp  LoggerBase.cpp  LoggerBuffer.cpp  SyncLogger.cpp
logger/src/Sinks/: ConsoleSink.cpp  DailyFileSink.cpp  DefaultFileSink.cpp  FileSink.cpp  HourlyFileSink.cpp  RotateFileSink.cpp  SinkBase.cpp  TimedFileSink.cpp
test/: CMakeLists.txt
test/include/: MyFormatter.h
test/src/: MyFormatter.cpp  async_logger_test.cpp  formatter_test.cpp  main.cpp  rotate_logger_test.cpp  sync_logger_test.cpp  timed_logger_test.cpp
